# ray-tracer

./: Cargo.toml
res/: triangle.gltf
src/: lib.rs  loader.rs  main.rs  shader.wgsl
