[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30", features = ["rwh_05"] }
env_logger = "0.11"
log = "0.4"
wgpu = "24.0"
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
